framec_tests/language_specific/typescript/v3_capabilities/system_params/negative/system_start_param_mismatch_v3.frm
@target typescript
# @expect: E416

// Negative: system $(...) params do not match start state's parameters.

system SystemStartParamMismatchTs($(color), $>(enterColor), domain) {
    interface:
        run()

    machine:
        $Red(initialColor: string) {
            $>(enterColor: string) {
            }
            run() {
                -> $Red(initialColor)
            }
        }

    domain:
        domain = null
}

